--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,6 +76,6 @@
   padding: .8rem;
   line-height: 1.15;
   text-align: left;
-  background-color: green;
+  background-color: rgb(10, 169, 10);
   font-family: 'Russo One', sans-serif;
 }
