--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -49,3 +49,23 @@
     font-weight: bolder;
     margin-bottom: 12px;
 }
+
+.adminbts {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.btnAdmDel {
+    background-color: rgb(208, 61, 61);
+    border-radius: 0.4rem;
+    border: 0;
+    font-size: larger;
+}
+
+.editImg{
+    width: 45px;
+    height: auto;
+    margin: -8px;
+    margin-bottom: -12px;
+    border: none;
+}
