--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -10,9 +10,14 @@
     cursor: pointer; 
 }
 
+.li {
+    border: 1px solid rgb(220, 216, 216);
+}
+
 .item:hover {
+    border: 2px;
     background-color: #bbc3cb; 
-    }
+}
 
 .image {
     width: 3rem; 
