--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+img {
+  height: 200px;
+  width: auto;
+}
 
 a {
   color: inherit;
@@ -13,6 +17,23 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+label {
+  margin-right: 5px;
+}
+
+button {
+  background-color: black;
+}
+
+button:hover {
+  background-color: rgb(230, 230, 51);
+}
+
+input:focus {
+  background-color: white;
+  color: black;
 }
 
 @media (prefers-color-scheme: dark) {
