--- a/styles/CreateProduct.module.css
+++ b/styles/CreateProduct.module.css
@@ -10,14 +10,14 @@
 
 .newPsubmit {
     margin: 0 30% 0 30%;
-    border-radius: 1rem;
+    border-radius: .4rem;
     color: grey;
 }
 
 .btnHomeCreate {
     margin: 10% 40% 0 40%;
-    border-radius: 1rem;
-    color: grey;
+    border-radius: .4rem;
+    color: rgb(128, 128, 128);
 
 }
 
